--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,9 @@ code {
 .platinum:hover > div {border-color: #c9c9c9; box-shadow: 0 0 10px #c9c9c9;}
 .header-btn {box-shadow: 0 0 10px rgba(255,255,255,0.8);}
 
+input:focus {outline: none; }
+.btn-golden {border-color: #e9a134; box-shadow: 0 0 8px #e9a134;}
+
 @media screen and (max-width: 767px) {
   .totalBox {text-align: center}
   .totalBox {height: 55px;}
