--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,9 @@ code {
 .header-btn {box-shadow: 0 0 10px rgba(255,255,255,0.8);}
 
 input:focus {outline: none; }
-.btn-golden {border-color: #e9a134; box-shadow: 0 0 8px #e9a134;}
+.btn-golden {border-color: #e9a134; box-shadow: 0 0 8px #e9a134; transition: all 0.3s ease-in-out 0s;}
+.btn-golden:hover {background-color: #e9a134;}
+/* .list-disc ::marker {font-size: 25px;} */
 
 @media screen and (max-width: 767px) {
   .totalBox {text-align: center}
