new page's update

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,9 @@ code {
   font-weight: normal;
 }
 
+a {
+  cursor: pointer;
+}
 .background {
   background-image: url("./assets/background.png");
 }
